manifests/base/06-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: my-app
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: taeyoondev/frontend-kube-test:latest
          imagePullPolicy: Always # 항상 새 이미지 가져오기
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 3000
